frontend/src/scss/styles.scss
// Custom.scss
// Option A: Include all of Bootstrap

// Include any default variable overrides here (though functions won't be available)

@import "../node_modules/bootstrap/scss/bootstrap";

// Then add additional custom code here

button.navbar-toggler {
    box-shadow: none !important;
}

button.navbar-toggler:hover {
    border: .125rem solid $gray-600;
}

h6.card-subtitle {
    box-sizing: content-box;
    height: 20.4px;
    overflow: auto;
    align-items: center;
}

.card {
    box-shadow: 0 2px 6px 0 $gray-500;
}

.card.order-card {
    max-width: 342px !important;
    max-height: 600px;
    flex-basis: 100%;
}

.card.card-financial {
    width: 100%;
    margin-left: 48px;
    margin-right: 48px;
}

.card-img-bottom {
    width: 100%;
    aspect-ratio: 1/1;
    overflow: hidden;
}

.scrollView {
    height: 625px;
    width: 100%;
    overflow-x: scroll;
}


@include media-breakpoint-between(md, xxl) {
    .card.card-even {
        margin-right: auto;

    }

    .card.card-odd {
        margin-left: auto;
    }
}

